[package]
name = "flagged"
version = "0.1.0"
authors = ["Ozaner Hansha <ozanerhansha@gmail.com>"]
description = "Bitflag-based warning type"
repository = "https://github.com/ozaner/flagged"
keywords = ["warning", "warnings", "bitflags", "enum", "flag"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
enumflags2 = "0.7.9"
